--- a/package.json
+++ b/package.json
@@ -3,7 +3,10 @@
   "version": "1.0.0",
   "main": "index.js",
   "license": "MIT",
-  "postinstall": "patch-package",
+  "scripts": {
+    "start": "ts-node --log-error index.ts",
+    "postinstall": "patch-package"
+  },
   "dependencies": {
     "body-parser": "^1.19.0",
     "ejs": "^3.0.1",
@@ -12,6 +15,7 @@
     "moment": "^2.24.0",
     "patch-package": "^6.2.0",
     "plaid": "^4.3.0",
+    "rxjs": "^6.5.4",
     "ts-node": "^8.6.1",
     "typescript": "^3.7.4"
   },
