--- a/package.json
+++ b/package.json
@@ -21,6 +21,25 @@
   },
   "devDependencies": {
     "@types/body-parser": "^1.17.1",
-    "@types/express": "^4.17.2"
+    "@types/express": "^4.17.2",
+    "@typescript-eslint/eslint-plugin": "^2.15.0",
+    "@typescript-eslint/parser": "^2.15.0",
+    "eslint": "^6.8.0",
+    "husky": "^4.0.7",
+    "lint-staged": ">=8",
+    "prettier": "1.19.1",
+    "pretty-quick": "^2.0.1"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
+  },
+  "lint-staged": {
+    "*.js": [
+      "eslint --fix",
+      "pretty-quick --staged",
+      "git add"
+    ]
   }
 }
