--- a/package.json
+++ b/package.json
@@ -5,12 +5,16 @@
   "license": "MIT",
   "scripts": {
     "start": "ts-node --log-error index.ts",
-    "postinstall": "patch-package"
+    "postinstall": "patch-package",
+    "lint": "eslint --ext \".js,.jsx,.ts,.tsx\" ./",
+    "lint:types": "tsc --noEmit",
+    "format": "prettier --write ./**/*.{js,ts,tsx}"
   },
   "dependencies": {
     "body-parser": "^1.19.0",
     "ejs": "^3.0.1",
     "envvar": "^2.0.0",
+    "eslint-plugin-prettier": "^3.1.2",
     "express": "^4.17.1",
     "moment": "^2.24.0",
     "patch-package": "^6.2.0",
@@ -27,8 +31,7 @@
     "eslint": "^6.8.0",
     "husky": "^4.0.7",
     "lint-staged": ">=8",
-    "prettier": "1.19.1",
-    "pretty-quick": "^2.0.1"
+    "prettier": "1.19.1"
   },
   "husky": {
     "hooks": {
@@ -36,9 +39,9 @@
     }
   },
   "lint-staged": {
-    "*.js": [
+    "*.{js,ts,tsx}": [
       "eslint --fix",
-      "pretty-quick --staged",
+      "prettier --write",
       "git add"
     ]
   }
